        it's a README (#10).
      - The indexer will now index a testing release if there are no stable
        releases, and will index an unstable release if there are neither stable
        nor testing releases (#2).
      - Updated the SemVer regex when parsing rsync output to the official
        version published in https://regex101.com/r/vkijKf/ (#16).

0.16.5  2016-06-22T18:03:05Z
      - Fixed a test failure on systems with a non-English locale, thanks to
        Slaven Rezić (issue #25).
      - Fixed test failures on Windows.

0.16.4  2016-06-15T16:10:33Z
      - Fixed a bug where v1.0.0 Semantic Versions were not matched in synced
        file names and directories.
      - Fixed a bug that tried to read an extension JSON file case-sensitively.
      - Fixed test failures due to a change in the generation of JSONP
        responses in Plack 1.0031.
      - Fixed a bug where the "pgxnbod" ID of a cleaned HTML element could be
        removed if the last element in the body was removed.

0.16.3  2013-06-19T06:31:51Z
      - Updated URI::Template to v0.16 for its support for `{+var}` and
        dropped the nasty hack required to work around the lack of it in
        earlier versions.
      - Updated GitHub URLs to point to `/pgxn/` rather than `/theory/`.
      - Fixed a bug on the HTML documentation table of contents generator
        where it would choke on finding an `h1` after an `h3`.
      - Fixed test failures due to a change in the API of Email::Sender.
      - Removed the Pod tests from the distribution.
      - Eliminated smartmatch warnings on Perl 5.18.

0.16.2  2012-02-14T06:46:47Z
      - Empty Documentation files are no longer indexed or displayed.
      - All files extracted from distribution zip files into the source
        directory are now globally readable. This behavior eliminates
        permissions errors when the user that serves the files is different
        than the one that unzipped them.