@@ -9,7 +9,7 @@
    "date": "2010-10-29T22:46:45Z",
    "release_status": "testing",
    "user": "theory",
-   "sha1": "703c0c485166636317c3d4bc8a1a36d512761af7",
+   "sha1": "443cbcf678a3c2f479c4c069bcb96054d9b25a32",
    "license": "postgresql",
    "provides": {
       "pair": {
